Add handler template, placement. Update view template.

--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -1221,6 +1221,9 @@
   <ItemGroup>
     <Content Include="Common\Views\Content.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Common\Placement.info" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
