Refactor the Mooncake theme and fix login bug

--- a/src/Coevery.Web/Themes/Themes.csproj
+++ b/src/Coevery.Web/Themes/Themes.csproj
@@ -1977,26 +1977,22 @@
     <Content Include="MooncakeBase\Styles\widget.css" />
     <Content Include="MooncakeBase\Theme.png" />
     <Content Include="MooncakeBase\Theme.txt" />
-    <Content Include="Mooncake\Scripts\js\dropdown.js" />
-    <Content Include="Mooncake\Scripts\js\libs\bootstrap.js" />
-    <Content Include="Mooncake\Scripts\js\libs\bootstrap.min.js" />
+    <Content Include="Mooncake\Scripts\bootstrap\bootstrap.js" />
+    <Content Include="Mooncake\Scripts\bootstrap\bootstrap.min.js" />
+    <Content Include="Mooncake\Scripts\js\jquery.placeholder.js" />
+    <Content Include="Mooncake\Scripts\js\jquery.placeholder.min.js" />
+    <Content Include="Mooncake\Scripts\js\login.js" />
     <Content Include="Mooncake\Scripts\js\perfect-scrollbar.js" />
     <Content Include="Mooncake\Scripts\js\setup.js" />
-    <Content Include="Mooncake\Scripts\js\template.js" />
     <Content Include="Mooncake\Scripts\plugins\bootstrap-select\bootstrap-select.js" />
     <Content Include="Mooncake\Scripts\plugins\bootstrap-select\bootstrap-select.min.js" />
     <Content Include="Mooncake\Scripts\plugins\select2\select2.js" />
     <Content Include="Mooncake\Scripts\plugins\select2\select2.min.js" />
-    <Content Include="Mooncake\Scripts\uniform\jquery.uniform.js" />
-    <Content Include="Mooncake\Scripts\uniform\jquery.uniform.min.js" />
     <Content Include="Mooncake\Styles\bootstrap\bootstrap-responsive.css" />
     <Content Include="Mooncake\Styles\bootstrap\bootstrap-responsive.min.css" />
     <Content Include="Mooncake\Styles\bootstrap\bootstrap.css" />
     <Content Include="Mooncake\Styles\bootstrap\bootstrap.min.css" />
     <Content Include="Mooncake\Styles\button.css" />
-    <Content Include="Mooncake\Styles\common.css" />
-    <Content Include="Mooncake\Styles\dropdowns.css" />
-    <Content Include="Mooncake\Styles\filter.css" />
     <Content Include="Mooncake\Styles\fonts\fontello\fontello-codes.css" />
     <Content Include="Mooncake\Styles\fonts\fontello\fontello-embedded.css" />
     <Content Include="Mooncake\Styles\fonts\fontello\fontello-ie7-codes.css" />
@@ -3344,15 +3340,14 @@
     <Content Include="Mooncake\Styles\images\user.jpg" />
     <Content Include="Mooncake\Styles\images\vlabels.png" />
     <Content Include="Mooncake\Styles\images\white_tiles.png" />
-    <Content Include="Mooncake\Styles\layout-base.css" />
-    <Content Include="Mooncake\Styles\layout-coevery.css" />
+    <Content Include="Mooncake\Styles\layout.css" />
+    <Content Include="Mooncake\Styles\login.css" />
     <Content Include="Mooncake\Styles\lt-ie9.css" />
     <Content Include="Mooncake\Styles\main-style.css" />
     <Content Include="Mooncake\Styles\misc.css" />
     <Content Include="Mooncake\Styles\perfect-scrollbar.css" />
     <Content Include="Mooncake\Styles\plugins\bootstrap-select\bootstrap-select.css" />
     <Content Include="Mooncake\Styles\plugins\bootstrap-select\bootstrap-select.min.css" />
-    <Content Include="Mooncake\Styles\plugins\elfinder.css" />
     <Content Include="Mooncake\Styles\plugins\fullcalendar.css" />
     <Content Include="Mooncake\Styles\plugins\select2\select2.css" />
     <Content Include="Mooncake\Styles\plugins\select2\select2.png" />
@@ -3361,12 +3356,6 @@
     <Content Include="Mooncake\Styles\site.css" />
     <Content Include="Mooncake\Styles\table.css" />
     <Content Include="Mooncake\Styles\ui.css" />
-    <Content Include="Mooncake\Styles\uniform\css\uniform.default.css" />
-    <Content Include="Mooncake\Styles\uniform\css\uniform.default.min.css" />
-    <Content Include="Mooncake\Styles\uniform\css\uniform.default.scss" />
-    <Content Include="Mooncake\Styles\uniform\images\bg-input-focus.png" />
-    <Content Include="Mooncake\Styles\uniform\images\bg-input.png" />
-    <Content Include="Mooncake\Styles\uniform\images\sprite.png" />
     <Content Include="Mooncake\Styles\utils.css" />
     <Content Include="Mooncake\Styles\Web.config" />
     <Content Include="Mooncake\Styles\widget.css" />
