--- a/src/Coevery.Web/Themes/Themes.csproj
+++ b/src/Coevery.Web/Themes/Themes.csproj
@@ -3506,6 +3506,9 @@
   <ItemGroup>
     <Content Include="Mooncake\Views\LogOn.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Mooncake\Views\MenuItem.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
