add not found  action

--- a/src/Coevery.Web/Core/Coevery.Core.csproj
+++ b/src/Coevery.Web/Core/Coevery.Core.csproj
@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\ClientRouteShape.cs" />
+    <Compile Include="Common\Controllers\ErrorController.cs" />
     <Compile Include="Common\Controllers\HomeController.cs" />
     <Compile Include="Common\DynamicPermissions.cs" />
     <Compile Include="Common\Extensions\IContentDefinitionExtension.cs" />
