--- a/src/Coevery.Web/DeveloperTools/Coevery.DeveloperTools.csproj
+++ b/src/Coevery.Web/DeveloperTools/Coevery.DeveloperTools.csproj
@@ -77,6 +77,7 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Data.Entity.Design" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -231,7 +232,6 @@
     <Compile Include="ListViewDesigner\ViewModels\EntityViewListModel.cs" />
     <Compile Include="RelationshipManagement\Controllers\RelationshipController.cs" />
     <Compile Include="RelationshipManagement\Controllers\AdminController.cs" />
-    <Compile Include="RelationshipManagement\EntityRecords\ReferenceFieldEntityRecordEditorEvents.cs" />
     <Compile Include="RelationshipManagement\Handlers\EntityMetadataPartHandler.cs" />
     <Compile Include="RelationshipManagement\Handlers\RelationshipDynamicTypeGenerationEventsHandler.cs" />
     <Compile Include="RelationshipManagement\Handlers\RelationshipEntityEventsHandler.cs" />
